--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -29,12 +29,12 @@ webapp:
     annotations:
       cert-manager.io/cluster-issuer: "mkcert"
     hosts:
-      - name: alterconso.gpenaud.localhost
+      - name: alterconso.localhost
         path: /
         tls: true 
 
   # app
-  vhost: alterconso.leportail.org
+  vhost: alterconso.localhost
   email:
     default: nobody@my-domain.org
     admin: admin@my-domain.org
