Updates sealed-secrets to be cluster-wide

--- a/helm/templates/database/sealed-secrets.yaml
+++ b/helm/templates/database/sealed-secrets.yaml
@@ -11,7 +11,8 @@ metadata:
     # consider also using "cluster-wide" if the namespace is also a parameter
     # please make sure you understand the implications, see README
     sealedsecrets.bitnami.com/force-managed: "true"
-    sealedsecrets.bitnami.com/namespace-wide: "true"
+    # sealedsecrets.bitnami.com/namespace-wide: "true"
+    sealedsecrets.bitnami.com/cluster-wide: "true"
 spec:
   encryptedData:
   {{- range $key, $val := .Values.database.env_as_secrets }}
